crates/notesmith-config/tests/snapshots/snapshots_tests__global_config_default.snap
---
source: crates/notesmith-config/tests/snapshots_tests.rs
expression: serialized
---
[daemon]
bind = "127.0.0.1:27183"
auto_start = true

[vaults]

[agents]
debug = false
